# nested-config

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  TODO.md  build_and_publish.sh  pre_commit.sh  pydantic_plus.py  pyproject.toml  ruff.sh  test_setup.sh
dev/: build_and_publish.sh  mypy.sh  run_tests.sh  test_setup.sh
nested_config/: __init__.py  _compat.py  _validators.py  base_model.py  json.py  loaders.py  parsing.py
pydantic_plus/: __init__.py  _compat.py  _config.py  _toml.py  _types.py  _validators.py  base_model.py  json.py  parsing.py  version.py
src/nested_config/: __init__.py  _pyd_compat.py  _pydantic.py  _validators.py  base_model.py  expand.py  json.py  loaders.py  parsing.py
tests/: test_ispydmodel.py  test_nested_config_base_model.py  test_pydantic_patched.py  test_pydantic_plus_base_model.py  test_pydantic_purepath.py  test_simple_files.py
tests/parsing/: test_simple_files.py  test_sub_model.py
tests/toml_parsing/: point.toml  test_simple_toml_file.py  test_sub_model.py
tests/yaml_parsing/: test_simple_yaml_file.py  test_yaml_sub_model.py
