[tool.poetry]
name = "pydantic-plus"
version = "1.2.0a0"
description = """\
Pydantic BaseModel extended with PurePosixPath json encoding & validation and from_toml and from_tomls\
classmethods\
"""
authors = ["Randall Pittman <randallpittman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10"
rtoml = "^0.7.0"
single-version = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.22.0"
isort = "^5.8.0"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 109
target-version = ['py38']

[tool.isort]
line_length = 109
multi_line_output = 3
include_trailing_comma = true
