[tool.poetry]
name = "pydantic-plus"
version = "1.2.0a1"
description = """\
Pydantic BaseModel extended with PurePosixPath json encoding & validation and from_toml and from_tomls\
classmethods\
"""
authors = ["Randall Pittman <pittmara@oregonstate.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1.10,<3.0.0"
single-version = "^1.6.0"
typing-extensions = "^4.10.0"

[tool.poetry.group.dev.dependencies]
ipython = "^7.22.0"
ruff = "^0.3.3"
pytest = "^8.1.1"
rtoml = "^0.10.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.pyright]
defineConstant = { "PYDANTIC_1" = false }  # change to true for Pydantic <2.0
